--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,3 +1,6 @@
 {% comment %}<!--
 Use this add elements to the <head/> of the document.
 -->{% endcomment %}
+
+<link type="text/css" rel="stylesheet" href="css/lightslider.css" />                  
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
