--- a/_includes/gumroad-the-mirror.html
+++ b/_includes/gumroad-the-mirror.html
@@ -1,1 +1,2 @@
 <div class="gumroad-product-embed" data-gumroad-product-id="IamGrq"><a href="https://gumroad.com/l/IamGrq">Loading...</a></div>
+<script src="https://gumroad.com/js/gumroad-embed.js"></script>
