--- a/_includes/gumroad-love-talk.html
+++ b/_includes/gumroad-love-talk.html
@@ -1,2 +1,8 @@
 <div class="gumroad-product-embed" data-gumroad-product-id="XyoAV"><a href="https://gumroad.com/l/XyoAV">Loading...</a></div>
 <script src="https://gumroad.com/js/gumroad-embed.js"></script>
+
+<script>
+var DOMContentLoaded_event = document.createEvent("Event");
+DOMContentLoaded_event.initEvent("DOMContentLoaded", true, true);
+window.document.dispatchEvent(DOMContentLoaded_event);
+</script>
