--- a/_includes/gumroad-love-talk.html
+++ b/_includes/gumroad-love-talk.html
@@ -2,7 +2,7 @@
 <script src="https://gumroad.com/js/gumroad-embed.js"></script>
 
 <script>
-var DOMContentLoaded_event = document.createEvent("Event");
-DOMContentLoaded_event.initEvent("DOMContentLoaded", true, true);
-window.document.dispatchEvent(DOMContentLoaded_event);
+var load_event = document.createEvent("Event");
+load_event.initEvent("load", true, true);
+window.document.dispatchEvent(load_event);
 </script>
